syntax = "proto3";

package filter.v1;

option go_package = "github.com/darvenommm/dating-bot-service/pkg/api/filter/v1;filterv1";

import "common/v1/gender.proto";
import "google/type/latlng.proto";

message SetFilterRequest {
	int64 user_id = 1;
	common.v1.Gender gender = 2;
	uint32 min_age = 3;
	uint32 max_age = 4;
}

message SetFilterResponse {}
